# GleedSDL

./: CMakeLists.txt
